# pylox

./: .gitignore  .pre-commit-config.yaml  notes.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
examples/: counter-closure.lox  counterintuitive-scoping.lox  for-implicit-infinite.lox  for-infinite.lox  function-as-argument.lox  hello-functions.lox  if-logical.lox  recursive-fib.lox
src/lox/: __main__.py  ast_printer.py  environment.py  expr.py  interpreter.py  lox.py  lox_callable.py  parser.py  scanner.py  stmt.py  token.py  token_type.py
tests/: test_ast.py  test_interpreter.py  test_lox.py  test_parser.py  test_scanner.py
