[project]
name = "pylox"
version = "0.1.0"
description = "A Python implementation of the Lox interpreter"
requires-python = ">=3.10"

[tool.ruff]
extend-select = ["ALL"]
line-length = 88
target-version = "py310"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.pytest.ini_options]
addopts = """
    --hypothesis-show-statistics
    -v
    --cov=src
    --cov-report=term-missing:skip-covered
    --durations=10
    """
testpaths = ["tests"]
