[project]
name = "pylox"
version = "0.1.0"
description = "A Python implementation of the Lox interpreter"
requires-python = ">=3.10"

[project.scripts]
pylox = "lox.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lox"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.pytest.ini_options]
addopts = """
    --hypothesis-show-statistics
    -v
    --cov=src
    --cov-report=term-missing:skip-covered
    --durations=10
    """
testpaths = ["tests"]
